website/versioned_docs/version-2.1.0/guide_manual/admin-user.md
---
id: version-2.1.0-admin-user
title: User Management
original_id: admin-user
---

## Creating New Users

![](assets/user_6.png)

Click `Add` to add a user and it will pop up the edit screen of Users.

![](assets/user_4.png)

There have `Username` and `E-mail` need to fill, click `Confirm` to complete.

## Deleting User

Click `Delete` in the users list, the confirmation dialog will pop up, and the user will be deleted when you click `OK`.

![](assets/user_10.png)

## Editing User

![](assets/user_7.png)

Click `Edit` to enter the edit page of the User.

## Basic Info

![](assets/user_5.png)

Edit user information & set user usage items on this screen, including:

+ `Totp` Enable OTP for user.

+ `Is Admin` Set the user as Admin.

+ `Enable` Disable the user.

+ `Personal Disk Quota` Disk size for the user.

## Connecting Users to Groups

![](assets/user_15.png)

Click `connect existed Groups` under the edit user's screen, and to select the group to which the user belongs from the existing groups list and link them.

## Send Email

![](assets/user_18.png)

The administrator can request the user to change the following settings through system E-mail:

+ `Update Password` Require users to update their passwords.

+ `Configure OTP` Require users to set up OTP on their device using google authentication or other OTP software (one-time password).

+ `Verify Email` The user is required to verify the E-mail and e-mail the verified link to the user.

+ `Update Profile` Require users to update their profile.

## Reset Password

![](assets/user_19.png)

Require users to reset their password. Please enter your password twice. If `Temporary` is turned on, the new password only be used once, and the user must change the password immediately after logging
in.
