website/versioned_docs/version-2.5/guide_manual/admin-user.md
---
id: version-2.5-admin-user
title: User Management
original_id: admin-user
---
<div class="label-sect">
  <div class="ee-only tooltip">Enterprise
    <span class="tooltiptext">Applicable to Enterprise Edition</span>
  </div>
  <div class="ce-only tooltip">Community
    <span class="tooltiptext">Applicable to Community Edition</span>
  </div>
</div>

![](assets/user_6_v26.png)

## Creating New Users

Click `+ Add` to add a user and it will pop up the edit screen of Users.

![](assets/user_4_v26.png)

There have `Username` and `E-mail` need to fill, click `Confirm` to complete.

## Deleting User

![](assets/actions.png)

Click Delete button of Actions in the users list, the confirmation dialog will pop up, and the user will be deleted when you click `OK`.

## Editing User

![](assets/actions.png)

Click Edit button of Actions to enter the edit page of the User.

### Basic Info

![](assets/user_5_v26.png)

Edit user information & set user usage items on this screen, including:

+ `Is Admin` Set the user as Admin.

+ `Enable` Disable the user.

+ `Personal Volume Capacity` Volume size for the user.

### Editing Groups

![](assets/edit_groups.png)

Click `edit groups` under the edit user's screen, and to select the group to which the user belongs from the existing groups list and link them.

### Send Email

![](assets/user_18_v26.png)

The administrator can request the user to change the following settings through system E-mail:

+ `Update Password` Require users to update their passwords.

+ `Configure OTP` Require users to set up OTP on their device using google authentication or other OTP software (one-time password).

+ `Verify Email` The user is required to verify the E-mail and e-mail the verified link to the user.

+ `Update Profile` Require users to update their profile.

### Reset Password

![](assets/user_19_v26.png)

Require users to reset their password. Please enter your password twice. If `Temporary` is turned on, the new password only be used once, and the user must change the password immediately after logging
in.